src/test/deca/context/invalid/created/class_incorrect_new1.deca
//Description :
// Initialisation invalide
//
// Resultats :
// Erreur

{
    int a = new int();
}
